# robmob_ws

./: .gitignore
src/: package.xml  setup.py
src/exemple/mission_msgs/srv/: MissionCancel.srv
src/launch/: launch.py  rviz.launch.py  traj.py
src/mission_msgs/: CMakeLists.txt  package.xml
src/mission_msgs/msg/: Trajectory.msg
src/mission_msgs/srv/: MissionRequest.srv
src/my_teleop_joy/: CMakeLists.txt  my_teleop_node.py  package.xml  planification.py  setup.cfg  setup.py  traj.py  traj1.py
src/my_teleop_joy/launch/: commande.py  exploration_launch.py  rviz.launch.py  start_map_server_amcl.launch.py
src/my_teleop_joy/my_teleop_joy/: exploration_node.py  frames_2025-12-28_23.19.38.gv  generate_goal.py  my_teleop_node.py  pathmanager.py  switch.py  traj1.py  traj2.py  trajplannig.py
src/my_teleop_joy/params/: amcl.yaml  map_inflated.pgm
src/my_teleop_joy/rviz/: robmob.rviz
src/my_teleop_joy/src/: evitementobstacle.py  mapmanager2.py  pathmanager.py  traitement_map.py  traj1.py  trajplannig.py
src/my_teleop_joy/srv/: getrobotpose.srv
src/navigation/: CMakeLists.txt  package.xml
src/navigation/launch/: launch_navigation.py  start_slam_toolbox.launch.py  traj.py
src/navigation/params/: map_name.pgm  slam_tool_box.yaml
src/navigation/src/: mapmanager.py  pathmanager.py  planification.py  trajplannig.py
src/navigation/srv/: ComputePath.srv
src/params/: map_name.yaml
src/rviz/: robmob.rviz
